<resources>
    <string name="app_name">Bus</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="neixunhuan">内循环</string>
    <string name="waixunhuan">外循环</string>
    <string name="zhire">制热</string>
    <string name="saofeng">扫风</string>
    <string name="zhileng">制冷</string>
    <string name="dianchiguanlixitong">电池管理系统</string>
    <string name="dianchizongdianya">电池总电压</string>
    <string name="dianchisoc">电池SOC</string>
    <string name="dianchizongxiangshu">电池总箱数</string>
    <string name="zuigaowendudianchiweizhi">最高温度电池位置</string>
    <string name="zuidiwendudianchiweizhi">最低温度电池位置</string>
    <string name="dantizuigaodianya">单体最高电压</string>
    <string name="dantizuididianya">单体最低电压</string>
    <string name="shengyunengliang">剩余能量</string>
    <string name="shunshigonglv">瞬时功率</string>
    <string name="shunshigonghao">瞬时功耗</string>
    <string name="zuigaodianyadianchixiangjieshu">最高电压电池箱节数</string>
    <string name="zuididianyadianchixiangjieshu">最低电压电池箱节数</string>
    <string name="zuigaodianyadianchixiangweizhi">最高电压电池箱位置</string>
    <string name="zuididianyadianchixiangweizhi">最低电压电池箱位置</string>
    <string name="dianchichongfangdiandianliu">电池充放电电流</string>
    <string name="mokuaizuigaowendu">模块最高温度</string>
    <string name="mokuaizuidiwendu">模块最低温度</string>
    <string name="chongdianzhuanglianjiebiaozhiwei">充电桩连接标志位</string>
    <string name="jinzhichongdianbiaozhi">禁止充电标志</string>
    <string name="mokuai1">模块1</string>
    <string name="mokuai2">模块2</string>
    <string name="mokuai3">模块3</string>
    <string name="mokuai4">模块4</string>
    <string name="mokuai5">模块5</string>
    <string name="mokuai6">模块6</string>
    <string name="n1th">1)</string>
    <string name="n2th">2)</string>
    <string name="n3th">3)</string>
    <string name="n4th">4)</string>
    <string name="n5th">5)</string>
    <string name="n6th">6)</string>
    <string name="n7th">7)</string>
    <string name="n8th">8)</string>
    <string name="n9th">9)</string>
    <string name="n10th">10)</string>
    <string name="n11th">11)</string>
    <string name="n12th">12)</string>
    <string name="n13th">13)</string>
    <string name="n14th">14)</string>
    <string name="n15th">15)</string>
    <string name="n16th">16)</string>
    <string name="n17th">17)</string>
    <string name="n18th">18)</string>
    <string name="n19th">19)</string>
    <string name="n20th">20)</string>
    <string name="n21th">11)</string>
    <string name="n22th">22)</string>
    <string name="n23th">23)</string>
    <string name="n24th">24)</string>
    <string name="n25th">25)</string>
    <string name="n26th">26)</string>
    <string name="n27th">27)</string>
    <string name="n28th">28)</string>
    <string name="n29th">29)</string>
    <string name="n30th">30)</string>
    <string name="n31th">31)</string>
    <string name="n32th">32)</string>
    <string name="dianchixinxi">电池信息</string>
    <string name="jiashiyuandingdeng">驾驶员顶灯</string>
    <string name="qianwudeng">前雾灯</string>
    <string name="yuedudengshuru">阅读灯输出</string>
    <string name="penshuidianji">喷水电机</string>
    <string name="yuguaqimandang">雨刮器慢档</string>
    <string name="jinguangdeng">近光灯(控制继电器)</string>
    <string name="zhongmenguanmendiacifa">中门关电磁阀</string>
    <string name="youqianzhuanxiang">右转向灯</string>
    <string name="kongtiaokaiguandianyuan">空调电源开关</string>
    <string name="weishengjianqiangzhipaiwufa">卫生间强制排污阀</string>
    <string name="jiansuqidianyuan">减速器电源</string>
    <string name="daochedeng">倒车灯</string>
    <string name="cedianzilupai">侧电子路牌</string>
    <string name="dianshijidianyuan">电视机电源</string>
    <string name="disansuidongqiaokongzhidiancifa">第三随动桥控制电磁阀</string>
    <string name="weishengjian">卫生间</string>
    <string name="zhizongdianyuanjidianqi">至总电源继电器</string>
    <string name="ganzaoji">干燥器</string>
    <string name="qidongjidianqi">启动继电器</string>
    <string name="qiandianzilupai">前电子路牌</string>
    <string name="dinglandeng">顶蓝灯</string>
    <string name="nuanshuidiancifa">暖水电磁阀</string>
    <string name="gaoyacangdeng">高压舱灯</string>
    <string name="weishengjianyourenzhishideng">卫生间有人指示灯</string>
    <string name="youxinglicangzhaomingdeng">右行李舱照明灯</string>
    <string name="qianmenguandiancifa">前门关电磁阀</string>
    <string name="fadianjishuiweichuanganqidianyuan">发动机水位传感器电源</string>
    <string name="youqianxhuanxiang">右前转向</string>
    <string name="zuoxinglicangzhaomingdeng">左行李舱照明灯</string>
    <string name="lupaidianyuan">路牌电源</string>
    <string name="houcangmendianciganyingshixianweikaiguan">后仓门电磁感应式限位开关</string>
    <string name="shigaodeng">示高灯</string>
    <string name="zhongmenkaimendiancifa">中门开电磁阀</string>
    <string name="zhongmentabudeng">中门踏步灯</string>
    <string name="yuguaqikuaidang">雨刮器快档</string>
    <string name="zhidongdeng">制动灯</string>
    <string name="dingshuangbaideng">顶双白灯</string>
    <string name="zuoqianzhuanxiang">左前转向</string>
    <string name="houwudeng">后雾灯</string>
    <string name="dingdanbaideng">顶单白灯</string>
    <string name="qilaba">气喇叭</string>
    <string name="qianmenkaidiancifa">前门开电磁阀</string>
    <string name="lupaideng">路牌灯</string>
    <string name="qianmentabudeng">前门踏步灯</string>
    <string name="xinglijiadeng">行李架灯</string>
    <string name="yuanguangdeng">远光灯</string>
    <string name="houdianzilupai">后电子路牌</string>
    <string name="pengzhuangjiancebaohu">碰撞检测保护</string>
    <string name="crashprotected">你的车辆发生碰撞 \r\n已启用碰撞保护</string>
    <string name="pengzhuangfashengshijian">碰撞发生时间</string>
    <string name="baohuzhuangtai">保护状态</string>
    <string name="yijiechubaohu">已解除保护</string>
    <string name="sensor1">传感器S1</string>
    <string name="sensor2">传感器S2</string>
    <string name="sensor3">传感器S3</string>
    <string name="sensor4">传感器S4</string>
    <string name="sensor5">传感器S5</string>
    <string name="sensor6">传感器S6</string>
    <string name="sensor7">传感器S7</string>
    <string name="sensor8">传感器S8</string>
    <string name="dianjizhuansu">电机转速</string>
    <string name="zhiliucedianya">直流侧电压</string>
    <string name="dianjikongzhiqiyunxingzhuangtai">电机控制器运行状态</string>
    <string name="dianjizuidadiandongzhuanju">电机最大电动转矩</string>
    <string name="nengliangliudongfangxiang">能量流动方向</string>
    <string name="dianjixiangdianliu">电机相电流</string>
    <string name="dianjikongzhiqiwendu">电机控制器温度</string>
    <string name="kongzhuan">空转</string>
    <string name="dianjiwendu">电机温度</string>
    <string name="dianjiyunzhuanfangxiang">电机运转方向</string>
    <string name="dianjizuidazhidongzhuanju">电机最大制动转矩</string>
    <string name="dianjizhuanju">电机转矩</string>
    <string name="dianjizuidaqudonggonglv">电机最大驱动功率</string>
    <string name="readyxinhao">READY信号</string>
    <string name="zhujiechuqizhuangtai">主接触器状态</string>
    <string name="dianjizuidazhidonggonglv">电机最大制动功率</string>
    <string name="zhuansuzhuanjumoshi">转速转矩模式</string>
    <string name="jueyuandianzu">绝缘电阻</string>
    <string name="jueyuanjianceyizhuangtai">绝缘检测仪状态</string>
    <string name="jueyuanjiance">绝缘检测</string>
    <string name="zongdianyuanyuchongdianjiechuqishuchuzhuangtai">总电源预充电接触器输出状态</string>
    <string name="yuchongdianjiechuqifankuizhuangtai">预充电接触器反馈状态</string>
    <string name="zongdianyuanjiechuqifankuizhuangtai">总电源接触器反馈状态</string>
    <string name="zhujiechuqifankuizhuangtai">主接触器反馈状态</string>
    <string name="chongdianjidianqishuchuzhuangtai">充电继电器输出状态</string>
    <string name="kongtiaojidianqishuchuzhuangtai">空调继电器输出状态</string>
    <string name="zongzhenggaoyabaoxianzhuangtai">总正高压保险状态</string>
    <string name="zongfugaoyabaoxianzhuangtai">总负高压保险状态</string>
    <string name="yuchongdianjiechuqishuchuzhuangtai">预充电接触器输出状态</string>
    <string name="zongdianyuanjiechuqishuchuzhuangtai">总电源接触器输出状态</string>
    <string name="zongdianyuanyuchongdianjiechuqifankuizhuangtai">总电源预充电接触器反馈状态</string>
    <string name="chongdianjidianqifankuizhuangtai">充电继电器反馈状态</string>
    <string name="chushuangjidianqishuchuzhuangtai">除霜继电器输出状态</string>
    <string name="zhujiechuqishuchuzhuangtai">主接触器输出状态</string>
    <string name="kongtiao">空调</string>
    <string name="gonglv">功率</string>
    <string name="apugongzuoshineng">APU工作使能</string>
    <string name="kongtiaoqidong">空调启动</string>
    <string name="zhujiechuqixinhao">主接触器状态</string>
    <string name="dianzhidong">电制动</string>
    <string name="yaoshion">钥匙ON</string>
    <string name="yaoshiacc">钥匙ACC</string>
    <string name="gaoyashouzhaxinhao">高压手闸信号</string>
    <string name="zhidongxinhao">制动信号</string>
    <string name="ready">READY</string>
    <string name="dianjizhidongyouxianxinhao">电机制动优先信号</string>
    <string name="yisukaiguan">怠速开关 </string>
    <string name="yaoshist">钥匙ST</string>
    <string name="kongtiaogonglvshuaijianshineng">空调功率衰减使能</string>
    <string name="kongtiaoshuaijianbili">空调衰减比例</string>
    <string name="zhuandongfangxiang">转动方向</string>
    <string name="shengyuchongdianshijian">剩余充电时间</string>
    <string name="bencixingshilicheng">本次行驶里程</string>
    <string name="zhengcheqiyazhi">整车气压值</string>
    <string name="dianjiniujuminglingzhi">电机扭矩命令值</string>
    <string name="fandianjifadiangonglv">发电机发电功率</string>
    <string name="zonglicheng">总里程</string>
    <string name="kexingshilicheng">可行驶里程</string>
    <string name="shuibengqidong">水泵启动</string>
    <string name="kmh">km/h</string>
    <string name="chesu">车速</string>
    <string name="youmen">油门</string>
    <string name="dangwei">档位</string>
    <string name="shache">刹车</string>
    <string name="apufangdianshineng">APU放电使能</string>
    <string name="kongtiaogongzuoshineng">空调工作使能</string>
    <string name="zhuchexinhao">驻车信号</string>
    <string name="daisukaiguan">怠速开关</string>
    <string name="kongtiaogongnengshineng">空调功能使能</string>
    <string name="zhengchekongzhiqi">整车控制器</string>
    <string name="dianjikongzhiqi">电机控制器</string>
    <string name="yanwubaojingqi">烟雾报警器</string>
    <string name="yitihuapeidiangui">一体化配电柜</string>
    <string name="cheshencan">车身CAN</string>
    <string name="pengzhuangjiancemokuai">碰撞检测模块</string>
    <string name="zhuansumoshi">转速模式</string>
    <string name="zhuanjumoshi">转矩模式</string>
    <string name="tingzhi">停止</string>
    <string name="zhengxiangzhuanju">正向转矩</string>
    <string name="zhengxiangzhuansu">正向转速</string>
    <string name="fanxiangzhuanju">反向转矩</string>
    <string name="fanxiangzhuansu">反向转速</string>
    <string name="yunxuchongdian">允许充电</string>
    <string name="jinzhichongdian">禁止充电</string>
    <string name="weilianjie">未连接</string>
    <string name="yilianjie">已连接</string>
    <string name="insulationstatus01">正在自检</string>
    <string name="insulationstatus02">工作正常</string>
    <string name="insulationstatus03">接线故障</string>
    <string name="insulationstatus04">高压正极对地绝缘电阻较小</string>
    <string name="insulationstatus05">高压负极对地绝缘电阻较小</string>
    <string name="insulationstatus06">设备故障</string>
    <string name="insulationwarning01">正常</string>
    <string name="insulationwarning02">二级告警  绝缘电阻小于500K</string>
    <string name="insulationwarning03">一级告警  绝缘电阻小于 80K</string>
    <string name="zuozhuanxiangdeng">左转向灯</string>
    <string name="youzhuanxiangdeng">右转向灯</string>
    <string name="devicestatus">设备状态:</string>
    <string name="zijian">自检</string>
    <string name="zhengchang">正常</string>
    <string name="tongxunguzhang">通讯故障</string>
    <string name="qitiduseguzhang">气体堵塞故障</string>
    <string name="duseguzhang">堵塞故障</string>
    <string name="yanwujinjiguzhang">烟雾紧急报警</string>
    <string name="shebeiguzhang">设备故障</string>
<string name="unconnect">断开</string>
    <string name="connect">闭合</string>
    <string name="normalturning">正转</string>
    <string name="reverseturning">反转</string>
    <string name="diandong">电动</string>
    <string name="fadian">发电</string>
    <string name="normal">正常</string>
    <string name="issue">故障</string>
    <string name="yes">是</string>
</resources>