<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp" >

        <TableRow>

            <ImageView
                android:id="@+id/bcf_qianmentabudeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/qianmentabudeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_zuoxinglicangzhaomingdeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/zuoxinglicangzhaomingdeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_houwudeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/houwudeng"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_yuanguangdeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/yuanguangdeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_youxinglicangzhaomingdeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/youxinglicangzhaomingdeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_zhidongdeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/zhidongdeng"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_qianwudeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/qianwudeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_zhongmentabudeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/zhongmentabudeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_daochedeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/daochedeng"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_jinguangdeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/jinguangdeng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_weishengjianyourenzhishideng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/weishengjianyourenzhishideng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_gaoyacangdeng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/gaoyacangdeng"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_qianmenkaidiancifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/qianmenkaidiancifa"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_dianshijidianyuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/dianshijidianyuan"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_qidongjidianqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/qidongjidianqi"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_qianmenguandiancifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/qianmenguandiancifa"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_zhongmenguanmendiacifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/zhongmenguanmendiacifa"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_weishengjianqiangzhipaiwufa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/weishengjianqiangzhipaiwufa"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_penshuidianji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/penshuidianji"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_zhongmenkaimendiancifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/zhongmenkaimendiancifa"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_nuanshuidiancifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/nuanshuidiancifa"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/bcf_qilaba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/qilaba"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_lupaideng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/lupaideng"
                android:textColor="#000000"
                android:textSize="14px" />

            <ImageView
                android:id="@+id/bcf_lupaidianyuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:background="@drawable/offstatus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/lupaidianyuan"
                android:textColor="#000000"
                android:textSize="14px" />
        </TableRow>
    </TableLayout>

</LinearLayout>