<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ac_model_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/loop_model_inner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/neixunhuan"
            android:textColor="#ffffff"
            android:textSize="15px" />

        <TextView
            android:id="@+id/loop_model_outer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80px"
            android:gravity="center"
            android:text="@string/waixunhuan"
            android:textColor="#ffffff"
            android:textSize="15px" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/loop_seekBar"
        android:layout_width="175px"
        android:layout_height="40px"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30px"
        android:max="100"
        android:maxHeight="40px"
        android:minHeight="40px"
        android:progress="8"
        android:progressDrawable="@drawable/loop_seekbar_define_style"
        android:thumb="@drawable/loop_seekbar_thumb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ac_model_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/zhire"
            android:textColor="#ffffff"
            android:textSize="15px" />

        <TextView
            android:id="@+id/ac_model_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:text="@string/saofeng"
            android:textColor="#ffffff"
            android:textSize="15px" />

        <TextView
            android:id="@+id/ac_model_cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40px"
            android:gravity="center"
            android:text="@string/zhileng"
            android:textColor="#ffffff"
            android:textSize="15px" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="175px"
        android:layout_height="40px"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30px"
        android:max="100"
        android:maxHeight="40px"
        android:minHeight="40px"
        android:progress="8"
        android:progressDrawable="@drawable/seekbar_define_style"
        android:thumb="@drawable/seekbar_thumb"/>

</LinearLayout>